--- a/index.html
+++ b/index.html
@@ -4,44 +4,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Omni-Hacker Terminal</title>
+    <title>Omni-Hacker Edge Terminal</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Fira Code', monospace;
-            cursor: crosshair;
-        }
-        ::-webkit-scrollbar {
-            width: 4px;
-        }
-        ::-webkit-scrollbar-track {
             background: #000;
+            color: #22c55e;
+            cursor: crosshair;
+            text-shadow: 0 0 5px rgba(34, 197, 94, 0.8);
         }
-        ::-webkit-scrollbar-thumb {
-            background: #22c55e;
-            border-radius: 10px;
+        
+        /* CRT Flicker Effect */
+        @keyframes flicker {
+            0% { opacity: 0.97; }
+            5% { opacity: 0.95; }
+            10% { opacity: 0.9; }
+            15% { opacity: 0.95; }
+            20% { opacity: 0.98; }
+            25% { opacity: 0.95; }
+            80% { opacity: 0.98; }
+            100% { opacity: 0.99; }
         }
-        @keyframes blink {
-            0%, 100% { opacity: 1; }
-            50% { opacity: 0; }
+        
+        .crt-overlay {
+            position: fixed;
+            top: 0; left: 0; width: 100vw; height: 100vh;
+            background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), 
+                        linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
+            background-size: 100% 2px, 3px 100%;
+            pointer-events: none;
+            z-index: 100;
+            animation: flicker 0.15s infinite;
         }
-        .cursor-blink {
-            animation: blink 1s step-end infinite;
-        }
+
         .scanline {
             width: 100%;
             height: 100px;
             z-index: 50;
-            background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(34, 197, 94, 0.1) 50%, rgba(0, 0, 0, 0) 100%);
-            opacity: 0.1;
+            background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(34, 197, 94, 0.05) 50%, rgba(0, 0, 0, 0) 100%);
             position: absolute;
             bottom: 100%;
-            animation: scanline 6s linear infinite;
+            animation: scanline 8s linear infinite;
+            pointer-events: none;
         }
+
         @keyframes scanline {
             0% { bottom: 100%; }
             100% { bottom: -100px; }
+        }
+
+        ::-webkit-scrollbar { width: 6px; }
+        ::-webkit-scrollbar-track { background: #000; }
+        ::-webkit-scrollbar-thumb { background: #22c55e; border-radius: 10px; }
+
+        .terminal-glow {
+            box-shadow: inset 0 0 20px rgba(34, 197, 94, 0.2), 0 0 20px rgba(34, 197, 94, 0.1);
         }
     </style>
 <script type="importmap">
@@ -57,6 +76,7 @@
 </script>
 </head>
 <body class="m-0 p-0 h-screen w-screen overflow-hidden">
+    <div class="crt-overlay"></div>
     <div id="root" class="h-full w-full"></div>
 </body>
 </html>
